#############################################################################
# $Id$
#############################################################################

NCBI_add_subdirectory(bdb sqlite)
# 
#

# Include projects from this directory

# Recurse subdirectories
#add_subdirectory(sqlite)
#add_subdirectory(bdb)
