##############################################################################
# 
#

# Include projects from this directory
include(CMakeLists.util.lib.txt)

# Recurse subdirectories
add_subdirectory(regexp)
add_subdirectory(xregexp)
add_subdirectory(compress)
add_subdirectory(diff)
add_subdirectory(image)
add_subdirectory(tables)
add_subdirectory(creaders)
add_subdirectory(sequtil)
add_subdirectory(bitset)
add_subdirectory(qparse)
add_subdirectory(test )
add_subdirectory(demo )
