##############################################################################
# 
#

# Include projects from this directory

# Recurse subdirectories
add_subdirectory(composition_adjustment)
add_subdirectory(core)
add_subdirectory(dbindex)
add_subdirectory(dbindex_search)
add_subdirectory(api)
add_subdirectory(format)
add_subdirectory(blastinput)
add_subdirectory(igblast)
add_subdirectory(gumbel_params)
add_subdirectory(unit_tests)
add_subdirectory(blast_sra_input)
