#############################################################################
# $Id$
#############################################################################

NCBI_add_library(cobalt)
NCBI_add_subdirectory(demo unit_test)

# Include projects from this directory
#include(CMakeLists.cobalt.lib.txt)

# Recurse subdirectories
#add_subdirectory(demo )
#add_subdirectory(unit_test )
