#############################################################################
# $Id$
#############################################################################

NCBI_add_subdirectory(formats omssa)

# Include projects from this directory

# Recurse subdirectories
#add_subdirectory(formats)
#add_subdirectory(omssa)
