#############################################################################
# $Id$
#############################################################################

NCBI_add_library(xalgoseqqa)
NCBI_add_subdirectory(demo)

# Include projects from this directory
#include(CMakeLists.xalgoseqqa.lib.txt)

# Recurse subdirectories
#add_subdirectory(demo )
