#############################################################################
# $Id$
#############################################################################

NCBI_add_app(bsdiff)

# Include projects from this directory
#include(CMakeLists.biosample_chk.app.txt)

# Recurse subdirectories
#add_subdirectory(unit_test )
