#############################################################################
# $Id$
#############################################################################

NCBI_add_subdirectory(demo split_demo)

# Include projects from this directory

# Recurse subdirectories
#add_subdirectory(demo )
#add_subdirectory(split_demo)
